[package]
name = "anchor-modular-program"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Replacement #[program] macro that allows specifying additional instruction modules"

[lib]
proc-macro = true

[dependencies]
anchor-syn = "0.31"
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]
test_program = { path = "./tests/test_program" }
