[package]
name = "anchor-modular-program"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Replacement #[program] macro that allows specifying additional instruction modules"
repository = "https://github.com/ssadler/anchor_modular_program"
readme = "README.md"                                            


[lib]
proc-macro = true

[dependencies]
anchor-syn = "0.31"
proc-macro2 = "1"
quote = "1"
syn = "1"

[dev-dependencies]
test_program = { path = "./tests/test_program" }
